--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -77,6 +77,7 @@ code {
 
 .scrollbar-wrapper {
 	height: 100%;
+	width: 100%;
 	position: relative;
 	overflow-x: hidden;
 	overflow-y: auto;
@@ -86,11 +87,12 @@ code {
 	&--sp {
 		&::-webkit-scrollbar {
 			width: 6px;
+			height: 6px;
 			background: transparent;
 		}
 
 		&::-webkit-scrollbar-thumb {
-			border-left: 3px solid rgba(0, 0, 0, 0.25);
+			border: 3px solid rgba(0, 0, 0, 0.25);
 		}
 	}
 }
